[gd_scene load_steps=7 format=3 uid="uid://3clqfnsknwrt"]

[ext_resource type="Script" path="res://tower/tower_plasma.gd" id="1_r8dty"]
[ext_resource type="Texture2D" uid="uid://bt2n2epycvudf" path="res://sprite/tour/corps.png" id="2_lxvja"]
[ext_resource type="Texture2D" uid="uid://yegty5i3n6ac" path="res://sprite/tour/anneau.png" id="3_je2xk"]
[ext_resource type="PackedScene" uid="uid://ciql3ga8rhef8" path="res://tower/bout_de_canon.tscn" id="5_3fmlx"]
[ext_resource type="Texture2D" uid="uid://cxbtrm54wa8xa" path="res://sprite/tour/canonPlasmaDroit.png" id="5_exeh0"]
[ext_resource type="PackedScene" path="res://tower/detection_area.tscn" id="6_15wb2"]

[node name="TowerPlasma" type="Node2D"]
script = ExtResource("1_r8dty")

[node name="Corps" type="Sprite2D" parent="."]
position = Vector2(0, -19.5)
texture = ExtResource("2_lxvja")

[node name="Anneau" type="Sprite2D" parent="."]
modulate = Color(0.278431, 0.611765, 0.0823529, 1)
position = Vector2(0, -19.5)
texture = ExtResource("3_je2xk")

[node name="DetectionArea" parent="." instance=ExtResource("6_15wb2")]
position = Vector2(0, -1)
collision_layer = 2

[node name="CanonPlasmaDroit" type="Sprite2D" parent="."]
position = Vector2(-3, -22)
texture = ExtResource("5_exeh0")
offset = Vector2(3.96, 1.44)

[node name="BoutDeCanon" parent="CanonPlasmaDroit" instance=ExtResource("5_3fmlx")]
position = Vector2(23, 0)
